# uv-python-lambda

./: .gitattributes  .gitignore  .projenrc.ts  API.md  README.md  biome.json  package-lock.json  package.json
.github/workflows/: biome.yml  build.yml
.projen/: deps.json  files.json  tasks.json
resources/: Dockerfile  entrypoint.sh  export.sh
src/: Dockerfile  build-container.ts  bundling.ts  function.ts  index.ts  types.ts
test/: function.test.ts
test/resources/basic_app/: pyproject.toml
test/resources/workspaces_app/: pyproject.toml
test/resources/workspaces_app/app/: app_handler.py  pyproject.toml
test/resources/workspaces_app/backend/: backend_handler.py  pyproject.toml
test/resources/workspaces_app/common/: README.md  pyproject.toml
test/resources/workspaces_app/common/src/common/: __init__.py  car.py
