[project]
name = "workspaces-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["common", "app", "backend"]

[tool.uv.sources]
common = { workspace = true }
app = { workspace = true }
backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "backend", "common"]
