[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]

[project.scripts]
common = "common:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
